fix : 나의 시간표 연결 에러 수정